Added material dialoghost on PCH's CreateConfirmMnemonic.

--- a/src/XelsPCHDesktopWalletApp/Views/CreateConfirmMnemonic.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/CreateConfirmMnemonic.xaml
@@ -4,14 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsPCHDesktopWalletApp.Views"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="CreateConfirmMnemonic" Height="560" Width="1050">
-    <Grid x:Name="Confirm_Account_Creation">
-        <Border Margin="10,10,10,10" Background="White" BorderBrush="Green" BorderThickness="3" CornerRadius="10">
 
-            <StackPanel>
-                <Border Margin="20 5" Height="109" Background="Green" CornerRadius="5">
-                    <!--<Grid Background="Green" Margin="10,10,10,-1" Height="100" Width="724">
+    <materialDesign:DialogHost Identifier="RootDialog">
+        <Grid x:Name="Confirm_Account_Creation">
+            <Border Margin="10,10,10,10" Background="White" BorderBrush="Green" BorderThickness="3" CornerRadius="10">
+
+                <StackPanel>
+                    <Border Margin="20 5" Height="109" Background="Green" CornerRadius="5">
+                        <!--<Grid Background="Green" Margin="10,10,10,-1" Height="100" Width="724">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
@@ -26,23 +29,23 @@
                             </Image>
                         </Border>
                     </Grid>-->
-                    <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" BorderBrush="WhiteSmoke" BorderThickness="3"  CornerRadius="10" Padding="5">
-                        <Border.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
-                        </Border.Effect>
-                        <Image Source="/Assets/Images/home-xels-logo-01.png" >
-                        </Image>
+                        <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" BorderBrush="WhiteSmoke" BorderThickness="3"  CornerRadius="10" Padding="5">
+                            <Border.Effect>
+                                <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                            </Border.Effect>
+                            <Image Source="/Assets/Images/home-xels-logo-01.png" >
+                            </Image>
+                        </Border>
                     </Border>
-                </Border>
 
 
 
-                <Border HorizontalAlignment="Center">
-                    <Label Margin="0,10,0,0" Content="Confirm words"  FontSize="28" FontWeight="DemiBold" />
-                </Border>
+                    <Border HorizontalAlignment="Center">
+                        <Label Margin="0,10,0,0" Content="Confirm words"  FontSize="28" FontWeight="DemiBold" />
+                    </Border>
 
-                <Border Margin="250 2.5">
-                    <!--<Grid>
+                    <Border Margin="250 2.5">
+                        <!--<Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
@@ -52,14 +55,14 @@
 
                         <TextBox Grid.Row="1" Name="word1" Padding="5" Margin="0 5" AutomationProperties.HelpText="Enter a wallet name." />
                     </Grid>-->
-                    <StackPanel>
-                        <TextBlock Height="8" Name="wordone" Margin="5 0" Text="{Binding ElementName=Valueone, Path=wordone}"/>
-                        <TextBox Name="word1" Padding="5" Margin="0 5" AutomationProperties.HelpText="Enter a wallet name." />
-                    </StackPanel>
-                </Border>
+                        <StackPanel>
+                            <TextBlock Height="Auto" Name="wordone" Margin="5 0" Text="{Binding ElementName=Valueone, Path=wordone}"/>
+                            <TextBox Name="word1" Padding="5" AutomationProperties.HelpText="Enter a wallet name." />
+                        </StackPanel>
+                    </Border>
 
-                <Border Margin="250 2.5">
-                    <!--<Grid>
+                    <Border Margin="250 2.5">
+                        <!--<Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
@@ -68,14 +71,14 @@
                         <Label Grid.Row="0" Name="wordtwo" Margin="5 0" Content="{Binding ElementName=Valuetwo, Path=wordtwo}"  />
                         <TextBox Grid.Row="1" Name="word2" Margin="0 5" Padding="5" />
                     </Grid>-->
-                    <StackPanel>
-                        <TextBlock Height="8" Name="wordtwo" Margin="5 0" Text="{Binding ElementName=Valuetwo, Path=wordtwo}"  />
-                        <TextBox Name="word2" Margin="0 5" Padding="5" />
-                    </StackPanel>
-                </Border>
+                        <StackPanel>
+                            <TextBlock Height="Auto" Name="wordtwo" Margin="5 0" Text="{Binding ElementName=Valuetwo, Path=wordtwo}"  />
+                            <TextBox Name="word2" Margin="0 5" Padding="5" />
+                        </StackPanel>
+                    </Border>
 
-                <Border Margin="250 2.5">
-                    <!--<Grid>
+                    <Border Margin="250 2.5">
+                        <!--<Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
@@ -84,15 +87,15 @@
                         <Label Grid.Row="0" Name="wordthree" Margin="5 0"  Content="{Binding ElementName=Valuethree, Path=wordthree}"  />
                         <TextBox Grid.Row="1" Name="word3" Margin="0 5" Padding="5"  />
                     </Grid>-->
-                    <StackPanel>
-                        <TextBlock Height="8" Name="wordthree" Margin="5 0"  Text="{Binding ElementName=Valuethree, Path=wordthree}"/>
-                        <TextBox Name="word3" Margin="0 5" Padding="5"/>
-                    </StackPanel>
-                </Border>
+                        <StackPanel>
+                            <TextBlock Height="Auto" Name="wordthree" Margin="5 0"  Text="{Binding ElementName=Valuethree, Path=wordthree}"/>
+                            <TextBox Name="word3" Margin="0 5" Padding="5"/>
+                        </StackPanel>
+                    </Border>
 
-                <Border Margin="250 10">
+                    <Border Margin="250 10">
 
-                    <!--<Grid >
+                        <!--<Grid >
 
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -117,27 +120,28 @@
 
                     </Grid>-->
 
-                    <StackPanel Width="554" Height="33" Orientation="Horizontal" >
-                        <Button Width="64" x:Name="cancelButton" Click="CancelButton_Click" Content="back" Padding="5" Margin="5 0" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                        <StackPanel Width="554" Height="33" Orientation="Horizontal" >
+                            <Button Width="64" x:Name="cancelButton" Click="CancelButton_Click" Content="back" Padding="5" Margin="5 0" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
+                                <Button.Resources>
+                                    <Style TargetType="Border">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
 
-                        <Button Width="439" x:Name="createButton" Click="CreateButton_Click" Content="Confirm" Padding="5" Margin="5 0" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0"  FontSize="14">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
-                    </StackPanel>
+                            <Button Width="439" x:Name="createButton" Click="CreateButton_Click" Content="Confirm" Padding="5" Margin="5 0" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0"  FontSize="14">
+                                <Button.Resources>
+                                    <Style TargetType="Border">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                        </StackPanel>
 
-                </Border>
+                    </Border>
 
-            </StackPanel>
-        </Border>
-    </Grid>
+                </StackPanel>
+            </Border>
+        </Grid>
+    </materialDesign:DialogHost>
 </Page>
