--- a/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
@@ -4,44 +4,46 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsPCHDesktopWalletApp.Views.Pages.ReceivePages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SelsPage">
+    <materialDesign:DialogHost>
+        <Grid Background="White" x:Name="Sels_Receive_Page">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-    <Grid Background="White" x:Name="Sels_Receive_Page">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="200" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+            <Border Grid.Row="0" Margin="100 2" x:Name="gridRow0">
+                <Image x:Name="image" HorizontalAlignment="Center" />
+            </Border>
+            <Border Grid.Row="1" Margin="100 02" x:Name="gridRow1" >
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="0.5*"/>
+                    </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="0" Margin="100 2" x:Name="gridRow0">
-            <Image x:Name="image" HorizontalAlignment="Center" />
-        </Border>
-        <Border Grid.Row="1" Margin="100 02" x:Name="gridRow1" >
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="0.5*"/>
-                </Grid.ColumnDefinitions>
+                    <Border  Grid.Column="0" Margin="5">
+                        <TextBox  x:Name="textBoxTextToQr" IsReadOnly="True" BorderBrush="Green" BorderThickness="1" Padding="5" />
+                    </Border>
+                    <Border Grid.Column="1" >
+                        <Button Content="Copy" Click="CopyAddressButton_Click" Margin="15 5" RenderTransformOrigin="2.423,0.568" BorderThickness="1" BorderBrush="Green" Background="White" Foreground="Black">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                <Border  Grid.Column="0" Margin="5">
-                    <TextBox  x:Name="textBoxTextToQr" IsReadOnly="True" BorderBrush="Green" BorderThickness="1" Padding="5" />
-                </Border>
-                <Border Grid.Column="1" >
-                    <Button Content="Copy" Click="CopyAddressButton_Click" Margin="15 5" RenderTransformOrigin="2.423,0.568" BorderThickness="1" BorderBrush="Green" Background="White" Foreground="Black">
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-
-                </Border>
-            </Grid>
-        </Border>
-        <Border Grid.Row="2" HorizontalAlignment="Center" x:Name="gridRow2" Visibility="Collapsed">
-            <TextBlock Text="You have not imported SELS address yet." FontSize="20" FontWeight="Bold"/>
-        </Border>
-    </Grid>
+                    </Border>
+                </Grid>
+            </Border>
+            <Border Grid.Row="2" HorizontalAlignment="Center" x:Name="gridRow2" Visibility="Collapsed">
+                <TextBlock Text="You have not imported SELS address yet." FontSize="20" FontWeight="Bold"/>
+            </Border>
+        </Grid>
+    </materialDesign:DialogHost>
 </Page>
