--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
@@ -9,18 +9,19 @@
              d:HorizontalAlignment="Stretch" d:VerticalAlignment="Stretch" Initialized="UserControl_Initialized">
 
 
-    <Grid>
-        <Rectangle Fill="#e9eeeb" Opacity=".8" MouseDown="Rectangle_MouseDown" />
+    <materialDesign:DialogHost Identifier="SendUserControl">
+        <Grid>
+            <Rectangle Fill="#e9eeeb" Opacity=".8" MouseDown="Rectangle_MouseDown" />
 
-        <Border CornerRadius="10"  Background="White" Height="540" Width="700" BorderBrush="Green" BorderThickness="2">
-            <Grid Margin="5,5,5,5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Label Grid.Row="0" Content="Send" HorizontalAlignment="Center"  FontSize="20" FontWeight="DemiBold" RenderTransformOrigin="0.515,-0.184" Width="54" Margin="0,-10,0,10" />
-                <!--<Button Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
+            <Border CornerRadius="10"  Background="White" Height="540" Width="700" BorderBrush="Green" BorderThickness="2">
+                <Grid Margin="5,5,5,5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" Content="Send" HorizontalAlignment="Center"  FontSize="20" FontWeight="DemiBold" RenderTransformOrigin="0.515,-0.184" Width="54" Margin="0,-10,0,10" />
+                    <!--<Button Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
 
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -28,43 +29,44 @@
                         </Style>
                     </Button.Resources>
                 </Button>-->
-                <Button Click="HidePopup_Click" 
+                    <Button Click="HidePopup_Click" 
                         VerticalAlignment="Top"
                         HorizontalAlignment="Right"
                         HorizontalContentAlignment="Left"
                         Background="White" BorderBrush="White">
 
-                    <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
-                </Button>
+                        <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
+                    </Button>
 
-                <Button  Grid.Row="1" Content="XELS" Click="XELS_Button_Click"  
+                    <Button  Grid.Row="1" Content="XELS" Click="XELS_Button_Click"  
                         Background="Green" Foreground="White" RenderTransformOrigin="0.174,0.571" 
                         FontWeight="Normal" Margin="10,4,486,14">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button  Grid.Row="1" Content="SELS" Click="SELS_Button_Click"  
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button  Grid.Row="1" Content="SELS" Click="SELS_Button_Click"  
                         Background="Green"   Foreground="White" FontWeight="Normal" Margin="204,4,256,14" >
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button  Grid.Row="1" Content="BELS" Click="BELS_Button_Click"
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button  Grid.Row="1" Content="BELS" Click="BELS_Button_Click"
                         RenderTransformOrigin="2.423,0.568"  Background="Green" 
                         Foreground="White" FontWeight="Normal" Margin="434,4,10,14">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Frame x:Name="SendFrame" Grid.Row="2" NavigationUIVisibility="Hidden" />
-            </Grid>
-        </Border>
-    </Grid>
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Frame x:Name="SendFrame" Grid.Row="2" NavigationUIVisibility="Hidden" />
+                </Grid>
+            </Border>
+        </Grid>
+    </materialDesign:DialogHost>
 </UserControl>
