--- a/src/XelsPCHDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -5,12 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsPCHDesktopWalletApp.Views.Pages"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                xmlns:gif="http://wpfanimatedgif.codeplex.com"
+      xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="900"
       Title="Dashboard" Loaded="Page_Loaded">
 
-    <materialDesign:DialogHost>
+    <materialDesign:DialogHost Identifier="DashboardPage">
         <Grid x:Name="Dashboard" >
             <Popup Name="DetailsPopup" Placement="Center"  AllowsTransparency="False"  HorizontalAlignment="Center" VerticalAlignment="Top" >
                 <Border Background="WhiteSmoke" BorderBrush="Green" BorderThickness="2" CornerRadius="10" >
