--- a/src/XelsXLCDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
@@ -9,124 +9,126 @@
       d:DesignHeight="500" d:DesignWidth="800"
       Title="CreateWalletPage">
 
+    <materialDesign:DialogHost Identifier="CreateWalletPage">
+        <Border Margin="10,10,10,05" Background="White" BorderBrush="Green" BorderThickness="2" CornerRadius="10">
+            <StackPanel Background="White" Margin="20 05">
 
-    <Border Margin="10,10,10,05" Background="White" BorderBrush="Green" BorderThickness="2" CornerRadius="10">
-        <StackPanel Background="White" Margin="20 05">
+                <Border Margin="20 5" Background="Green" CornerRadius="5">
+                    <Label  Content="Create a wallet" HorizontalAlignment="Center" Margin="5 0" FontSize="28" FontWeight="DemiBold" Foreground="White" />
+                </Border>
 
-            <Border Margin="20 5" Background="Green" CornerRadius="5">
-                <Label  Content="Create a wallet" HorizontalAlignment="Center" Margin="5 0" FontSize="28" FontWeight="DemiBold" Foreground="White" />
-            </Border>
+                <Border Margin="200 05">
+                    <Grid >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
-            <Border Margin="200 05">
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                        <Label Grid.Row="0"  Content="Name" Margin="5 0" FontSize="13" FontWeight="DemiBold"   />
+                        <TextBox Grid.Row="1" Name="name" MaxLength="24"  Padding="5"  materialDesign:HintAssist.Hint="Enter a wallet name."  TextChanged="Textbox_Null_check_OnKeyPress" materialDesign:HintAssist.IsFloating="False" />
+                        <Label Grid.Row="2" x:Name="walletName_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden">
+                            <Label.Content>
+                                <AccessText TextWrapping="Wrap"/>
+                            </Label.Content>
+                        </Label>
 
-                    <Label Grid.Row="0"  Content="Name" Margin="5 0" FontSize="13" FontWeight="DemiBold"   />
-                    <TextBox Grid.Row="1" Name="name" MaxLength="24"  Padding="5"  materialDesign:HintAssist.Hint="Enter a wallet name."  TextChanged="Textbox_Null_check_OnKeyPress" materialDesign:HintAssist.IsFloating="False" />
-                    <Label Grid.Row="2" x:Name="walletName_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden">
-                        <Label.Content>
-                            <AccessText TextWrapping="Wrap"/>
-                        </Label.Content>
-                    </Label>
+                    </Grid>
+                </Border>
+                <Border Margin="200 05">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
-                </Grid>
-            </Border>
-            <Border Margin="200 05">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <Label Grid.Row="0" Margin="5 0" Content="Password" FontSize="13" FontWeight="DemiBold"  />
-                    <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Padding="5" materialDesign:HintAssist.Hint="Enter Password" 
+                        <Label Grid.Row="0" Margin="5 0" Content="Password" FontSize="13" FontWeight="DemiBold"  />
+                        <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Padding="5" materialDesign:HintAssist.Hint="Enter Password" 
                                  PasswordChanged="Textbox_Null_check_OnKeyPress"  materialDesign:HintAssist.IsFloating="False"  />
-                    <Label Grid.Row="2" 
+                        <Label Grid.Row="2" 
                             x:Name="password_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden">
-                        <Label.Content>
-                            <AccessText TextWrapping="Wrap"/>
-                        </Label.Content>
-                    </Label>
-                </Grid>
-            </Border>
+                            <Label.Content>
+                                <AccessText TextWrapping="Wrap"/>
+                            </Label.Content>
+                        </Label>
+                    </Grid>
+                </Border>
 
-            <Border Margin="200 05">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height=".4*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height=".4*" />
-                    </Grid.RowDefinitions>
+                <Border Margin="200 05">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height=".4*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height=".4*" />
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Margin="5 0" Content="Confirm password" FontSize="13" FontWeight="DemiBold" />
-                    <PasswordBox Grid.Row="1" x:Name="repassword"
+                        <Label Grid.Row="0" Margin="5 0" Content="Confirm password" FontSize="13" FontWeight="DemiBold" />
+                        <PasswordBox Grid.Row="1" x:Name="repassword"
                              PasswordChar="*" Padding="5" 
                              
                             materialDesign:HintAssist.Hint="Confirm password"  
                              materialDesign:HintAssist.IsFloating="False"
                              PasswordChanged="Textbox_Null_check_OnKeyPress"  />
-                    <Label Grid.Row="2"  x:Name="repassword_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" >
-                        <Label.Content>
-                            <AccessText TextWrapping="Wrap"/>
-                        </Label.Content>
-                    </Label>
-                </Grid>
-            </Border>
+                        <Label Grid.Row="2"  x:Name="repassword_ErrorMessage" Padding="2" Margin="2" FontSize="10" FontWeight="DemiBold" Foreground="Red" Visibility="Hidden" >
+                            <Label.Content>
+                                <AccessText TextWrapping="Wrap"/>
+                            </Label.Content>
+                        </Label>
+                    </Grid>
+                </Border>
 
-            <Border Margin="200 05">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+                <Border Margin="200 05">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Margin="5 0" Content="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" />
-                    <PasswordBox Grid.Row="1" Name="passphrase" Padding="5" materialDesign:HintAssist.Hint="Enter an optional Passphrase."  materialDesign:HintAssist.IsFloating="False" />
+                        <Label Grid.Row="0" Margin="5 0" Content="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" />
+                        <PasswordBox Grid.Row="1" Name="passphrase" Padding="5" materialDesign:HintAssist.Hint="Enter an optional Passphrase."  materialDesign:HintAssist.IsFloating="False" />
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <Border Margin="200 15" Background="#FFFBCADA">
+                <Border Margin="200 15" Background="#FFFBCADA">
 
-                <TextBlock TextWrapping="WrapWithOverflow" Padding="10" HorizontalAlignment="Center" TextAlignment="Center" Foreground="#FF5B5555">
+                    <TextBlock TextWrapping="WrapWithOverflow" Padding="10" HorizontalAlignment="Center" TextAlignment="Center" Foreground="#FF5B5555">
                     Your passphrase will be required to recover your wallet in the future. <LineBreak/> <Bold>Keep it safe if you choose to have one</Bold>.
-                </TextBlock>
-            </Border>
+                    </TextBlock>
+                </Border>
 
-            <Border Margin="200 05">
-                <Grid>
+                <Border Margin="200 05">
+                    <Grid>
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="2*" />
-                    </Grid.ColumnDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
 
-                    <Button x:Name="cancelButton" Click="CancelButton_Click" Grid.Column="0" Content="Cancel"  VerticalAlignment="Center" Padding="5" Margin="3" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1,1,1,1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                        <Button x:Name="cancelButton" Click="CancelButton_Click" Grid.Column="0" Content="Cancel"  VerticalAlignment="Center" Padding="5" Margin="3" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1,1,1,1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                    <Button x:Name="createButton" Click="CreateButton_Click" Grid.Column="1" Content="Create a new wallet" Padding="5" Margin="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0" FontSize="14" >
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                        <Button x:Name="createButton" Click="CreateButton_Click" Grid.Column="1" Content="Create a new wallet" Padding="5" Margin="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0" FontSize="14" >
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
 
-        </StackPanel>
-    </Border>
+            </StackPanel>
+        </Border>
+    </materialDesign:DialogHost>
+
 </Page>
