DialogHost added on CrossChainControl of XLC and PCH

--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
@@ -47,116 +47,117 @@
         
     </Grid>-->
 
-    <Grid>
-        <Rectangle Fill="DarkGray" Opacity=".9" MouseDown="Rectangle_MouseDown" />
-        <Border Height="450" CornerRadius="5" Width="650" BorderBrush="Green" BorderThickness="1.5">
-            <Grid x:Name="Cross_Chain_Trans">
-                <StackPanel x:Name="Cross_Chain" Background="White" >
-                    <Button Click="HidePopup_Click" 
+    <materialDesign:DialogHost Identifier="CrosschainUserControl">
+        <Grid>
+            <Rectangle Fill="DarkGray" Opacity=".9" MouseDown="Rectangle_MouseDown" />
+            <Border Height="450" CornerRadius="5" Width="650" BorderBrush="Green" BorderThickness="1.5">
+                <Grid x:Name="Cross_Chain_Trans">
+                    <StackPanel x:Name="Cross_Chain" Background="White" >
+                        <Button Click="HidePopup_Click" 
                         VerticalAlignment="Top"
                         HorizontalAlignment="Right"
                         HorizontalContentAlignment="Left"
                         Background="White" BorderBrush="White">
 
-                        <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
-                    </Button>
-                    <Grid Margin="50 25">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
+                            <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
+                        </Button>
+                        <Grid Margin="50 25">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
 
-                        <Border Grid.Row="0" Background="Green" CornerRadius="8"  Height="30">
-                            <Label Content="Cross chain Transfer" FontSize="20" HorizontalAlignment="Center"  Foreground="White" Padding=" 0 0 0 3"  />
-                        </Border>
+                            <Border Grid.Row="0" Background="Green" CornerRadius="8"  Height="30">
+                                <Label Content="Cross chain Transfer" FontSize="20" HorizontalAlignment="Center"  Foreground="White" Padding=" 0 0 0 3"  />
+                            </Border>
 
-                        <!-- input form  -->
-                        <Border Grid.Row="01" Margin="0 15 0 0 ">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="*"/>
-                                </Grid.RowDefinitions>
+                            <!-- input form  -->
+                            <Border Grid.Row="01" Margin="0 15 0 0 ">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
 
-                                <Border Grid.Row="0">
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
+                                    <Border Grid.Row="0">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
 
-                                        </Grid.RowDefinitions>
+                                            </Grid.RowDefinitions>
 
-                                        <Border Grid.Row="0">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="2*" />
-                                                    <ColumnDefinition Width=".5*" />
-                                                    <ColumnDefinition Width="0.7*" />
-                                                    <!--  <ColumnDefinition Width=".5*" />-->
-                                                </Grid.ColumnDefinitions>
-                                                <Border Grid.Column="0" VerticalAlignment="Center">
-                                                    <TextBlock Text="Amount" Foreground="#DD000000" />
-                                                </Border>
-                                                <Border Grid.Column="1" VerticalAlignment="Center">
-                                                    <TextBlock Text="Spendable: " Foreground="#DD000000" HorizontalAlignment="Right" FontWeight="DemiBold"/>
-                                                </Border>
-                                                <Border Grid.Column="2" VerticalAlignment="Center">
-                                                    <TextBlock x:Name="textAvailableCoin" Foreground="#DD000000" FontWeight="DemiBold"/>
-                                                </Border>
-                                                <!--<Border Grid.Column="3">
+                                            <Border Grid.Row="0">
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="2*" />
+                                                        <ColumnDefinition Width=".5*" />
+                                                        <ColumnDefinition Width="0.7*" />
+                                                        <!--  <ColumnDefinition Width=".5*" />-->
+                                                    </Grid.ColumnDefinitions>
+                                                    <Border Grid.Column="0" VerticalAlignment="Center">
+                                                        <TextBlock Text="Amount" Foreground="#DD000000" />
+                                                    </Border>
+                                                    <Border Grid.Column="1" VerticalAlignment="Center">
+                                                        <TextBlock Text="Spendable: " Foreground="#DD000000" HorizontalAlignment="Right" FontWeight="DemiBold"/>
+                                                    </Border>
+                                                    <Border Grid.Column="2" VerticalAlignment="Center">
+                                                        <TextBlock x:Name="textAvailableCoin" Foreground="#DD000000" FontWeight="DemiBold"/>
+                                                    </Border>
+                                                    <!--<Border Grid.Column="3">
                                         <Label  Grid.Column="3" x:Name="textCoinType"/>
                                     </Border>-->
-                                            </Grid>
-                                        </Border>
+                                                </Grid>
+                                            </Border>
 
-                                        <Border Grid.Row="1">
-                                            <Grid>
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition Height="*" />
-                                                    <RowDefinition Height="Auto" />
-                                                </Grid.RowDefinitions>
+                                            <Border Grid.Row="1">
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="*" />
+                                                        <RowDefinition Height="Auto" />
+                                                    </Grid.RowDefinitions>
 
-                                                <!--Amount-->
-                                                <TextBox Grid.Row="0" x:Name="SendAmountText" TextChanged="CheckSendAmount_OnChange"/>
-                                                <TextBlock Grid.Row="1" x:Name="Amount_Error_Message_Label" Visibility="Visible" Foreground="red" Margin="0,0,0,0"/>
+                                                    <!--Amount-->
+                                                    <TextBox Grid.Row="0" x:Name="SendAmountText" TextChanged="CheckSendAmount_OnChange"/>
+                                                    <TextBlock Grid.Row="1" x:Name="Amount_Error_Message_Label" Visibility="Visible" Foreground="red" Margin="0,0,0,0"/>
 
-                                            </Grid>
-                                        </Border>
-                                    </Grid>
-                                </Border>
+                                                </Grid>
+                                            </Border>
+                                        </Grid>
+                                    </Border>
 
-                                <!--Address-->
-                                <StackPanel Grid.Row="1" Margin="0 5 0 0">
-                                    <TextBlock Text="Destination Address" Foreground="#DD000000"/>
-                                    <TextBox x:Name="DestinationAddressText" TextChanged="CalculateTransactionFee_OnChange"/>
-                                    <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
-                                </StackPanel>
+                                    <!--Address-->
+                                    <StackPanel Grid.Row="1" Margin="0 5 0 0">
+                                        <TextBlock Text="Destination Address" Foreground="#DD000000"/>
+                                        <TextBox x:Name="DestinationAddressText" TextChanged="CalculateTransactionFee_OnChange"/>
+                                        <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
+                                    </StackPanel>
 
-                                <!-- transaction fee-->
-                                <StackPanel Grid.Row="2" Margin=" 0 5 0 0">
-                                    <TextBlock Text="Transaction fee" Foreground="#DD000000"/>
-                                    <TextBox x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
-                                    <TextBlock Height="8" x:Name="TransactionFeeTypeLabel"/>
-                                    <TextBlock x:Name="TransactionWarningLabel" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
-                                </StackPanel>
+                                    <!-- transaction fee-->
+                                    <StackPanel Grid.Row="2" Margin=" 0 5 0 0">
+                                        <TextBlock Text="Transaction fee" Foreground="#DD000000"/>
+                                        <TextBox x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
+                                        <TextBlock Height="8" x:Name="TransactionFeeTypeLabel"/>
+                                        <TextBlock x:Name="TransactionWarningLabel" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
+                                    </StackPanel>
 
-                                <!--password-->
+                                    <!--password-->
 
-                                <StackPanel Grid.Row="3" Margin="0 5 0 5">
-                                    <TextBlock Text="Wallet Password" Foreground="#DD000000"/>
-                                    <PasswordBox x:Name="password" PasswordChar="*"/>
-                                </StackPanel>
+                                    <StackPanel Grid.Row="3" Margin="0 5 0 5">
+                                        <TextBlock Text="Wallet Password" Foreground="#DD000000"/>
+                                        <PasswordBox x:Name="password" PasswordChar="*"/>
+                                    </StackPanel>
 
-                            </Grid>
-                        </Border>
+                                </Grid>
+                            </Border>
 
-                        <!-- submit , cancel button -->
-                        <Border Grid.Row="2" Margin=" 0 5 0 0" >
-                            <StackPanel HorizontalAlignment="Right">
-                                <!--<Button Grid.Column="0" x:Name="CancelButton" Click="Cancel_CrossChainTransferButton_Click"  Content="Cancel" Padding="2" Margin="100,0,5,0"
+                            <!-- submit , cancel button -->
+                            <Border Grid.Row="2" Margin=" 0 5 0 0" >
+                                <StackPanel HorizontalAlignment="Right">
+                                    <!--<Button Grid.Column="0" x:Name="CancelButton" Click="Cancel_CrossChainTransferButton_Click"  Content="Cancel" Padding="2" Margin="100,0,5,0"
                     Background="Red" Height="35"
                       
                             Foreground="White">
@@ -167,7 +168,7 @@
                         </Button.Resources>
                     </Button>-->
 
-                                <Button Grid.Column="1" 
+                                    <Button Grid.Column="1" 
                                 x:Name="SendButton" 
                                 Click="CrossChainTransferButton_Click" 
                                 Content="Send" 
@@ -177,20 +178,22 @@
                                 Height="35"
                                 Width="198.5"
                                 Foreground="White">
-                                    <Button.Resources>
-                                        <Style TargetType="{x:Type Border}">
-                                            <Setter Property="CornerRadius" Value="5"/>
-                                        </Style>
-                                    </Button.Resources>
-                                </Button>
+                                        <Button.Resources>
+                                            <Style TargetType="{x:Type Border}">
+                                                <Setter Property="CornerRadius" Value="5"/>
+                                            </Style>
+                                        </Button.Resources>
+                                    </Button>
 
-                            </StackPanel>
-                        </Border>
+                                </StackPanel>
+                            </Border>
 
-                    </Grid>
+                        </Grid>
 
-                </StackPanel>
-            </Grid>
-        </Border>
-    </Grid>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
+    </materialDesign:DialogHost>
+
 </UserControl>
