--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
@@ -47,7 +47,8 @@
         
     </Grid>-->
 
-    <Grid>
+    <materialDesign:DialogHost Identifier="CrosschainUserControl">
+        <Grid>
         <Rectangle Fill="DarkGray" Opacity=".9" MouseDown="Rectangle_MouseDown" />
         <Border Height="450" CornerRadius="5" Width="650" BorderBrush="Green" BorderThickness="1.5">
             <Grid x:Name="Cross_Chain_Trans">
@@ -193,4 +194,5 @@
             </Grid>
         </Border>
     </Grid>
+    </materialDesign:DialogHost>
 </UserControl>
